<resources>
    <string name="app_name">MisDeudores</string>
    <string name="hola_mundo">Hola mundo</string>
    <string name="Registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="telefono">Telefono</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="respuesta">Nombre: %s \nCorreo: %s \nTelefono: %s \nGenero: %s \nPasatiempos: %s \nTipo de Dieta: %s \nDia de nacimiento: %s</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="genero">Genero</string>
    <string name="pasatiempos">Pasatiempos</string>
    <string name="gym">Gym</string>
    <string name="comer">Comer</string>
    <string name="series">Series</string>
    <string name="lugar_de_nacimiento2">Lugar de nacimiento</string>
    <string name="study">Estudiar</string>
    <string name="dia_de_nacimiento">Día de nacimiento</string>
    <string name="fecha">Fecha</string>
    <string name="registrar">Registrar</string>
    <string name="diet_type">Tipo de Dieta</string>
    <string name="Altura">altura</string>
    <string name="peso">Peso</string>
    <string name="correo_electronico_login">Correo Electronico</string>
    <string name="contrasena_login">Contraseña</string>
    <string name="piramide">piramide</string>
    <string name="sesion">Iniciar Sesión</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="bonne_sante">BonneSante</string>


    <string-array name="tipos_dieta">
        <item> Seleccione dieta</item>
        <item> Vegana</item>
        <item> Vegetariana</item>
        <item> Intolerante Lactosa</item>
        <item> Bajo en Carnes</item>

    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AlejoEstradaM</string>
    <string name="nav_header_subtitle">alejandro.estradam@udea.edu.co</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="perfil" />
    <string name="alimentos">Alimentos</string>
    <string name="dieta">Dieta</string>
    <string name="imc">IMC</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="recetas">Recetas</string>
    <string name="perfil_2">Perfil</string>
    <string name="aviso_salida"> Dele salida dos veces</string>
    <string name="imc_texto">En esta sección se pretende generar el índice de masa corporal, siguiendo el esquema de las dos imagenes anteriores. Donde pueda selecionar genero, luego con una barra pueda editar mis datos personales, finalmente en otra vista, se visualizara que IMC corresponde para la persona</string>
    <string name="tabla_nutricional">tabla</string>
    <string name="lunes">L</string>
    <string name="martes">M</string>
    <string name="miercoles">X</string>
    <string name="jueves">J</string>
    <string name="cambio_dieta">Cambiar Dieta</string>
    <string name="modificar">Modificar Dieta Actual</string>
    <string name="dieta_texto">Aquí se pretende manejar lo relacionado con la dieta personal de cada usuario, se visualizara con todas las comidas del dia, en la parte inferior se pretende establecer un radio buttom que permita seleccionar el dia especifico que quiero chequear, finalmente habran dos opciones, que son cambiar de tipo de dieta y modificar dieta actual</string>
    <string name="text_resto">Aqui se pretende generar un esquema como el anterior donde, se puedan dar opciones de diferentes tipos de restaurantes para las diferentes dietas disponibles</string>
    <string name="food_text">Se pretende en esta sección tener un menú tab en donde se pueda deslizar a la derecha o izquierda y a su vez acceder al banco de alimentos de la base de datos y en la otra sección a la serie de alimentos que la persona seleccionó y quiere que este en sus tablas de nutrición diaria</string>
    <string name="profile_text">"En esta sección, se pretende tener una imagen aleatoria de perfil, donde el usuario tenga la opción de cambiarla, habra una sección para editar datos personales, contraseñas y correo electronico. Finalmente, se creara un botón para cerrar sesión "</string>
    <string name="recetas_text">"En esta sección se pretende de cierta manera emular la imagen interior donde se recomiendan algunos tipos de recetas que sigan los lineamientos establecidos por lo usuarios "</string>
    <string name="calorias">Calorias</string>
    <string name="alimento">Alimento</string>
    <string name="ciudad">Ciudad</string>
    <string name="altura_imc">Altura:</string>
    <string name="peso_imc">Peso:</string>
    <string name="calcular">Calculo</string>
    <string name="olvide_contra">Olvide Contraseña</string>
    <string name="back">back</string>
    <string name="password">Password</string>
    <string name="vegan">Vegano</string>
    <string name="vegetariano">Vegetariano</string>
    <string name="variado">Variado</string>
    <string name="restaurantes_variados">Restaurantes Flexibles</string>
    <string name="restaurantes_vegano">Restaurantes Veganos</string>
    <string name="restaurantes_vegetarianos">Restaurantes Vegetarianos</string>
    <string name="regresar">Regresar</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_vegano_activity">Map</string>
    <string name="recetas_text_nuevo">"Aqui van las recetas "</string>

    <string name="foto_imc">foto_imc</string>
    <string name="correp">Correo</string>
    <string name="vegetarianos">Vegetarianos</string>
    <string name="veganos">Veganos</string>
    <string name="flexibles">Flexibles</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="preparacion">Preparacion</string>
    <string name="Recetas">Recetas</string>
    <string name="desayuno">Desayunos</string>
    <string name="almuerzo">Almuerzos</string>
    <string name="cena">Cenas</string>
    <string name="ensalada">Ensaladas</string>
    <string name="nombrereceta">" "</string>
    <string name="Pasos">Pasos</string>
    <string name="instrucciones">INSTRUCCIONES</string>
    <string name="ingrediente">INGREDIENTES</string>
    <string name="check">Check</string>
    <string name="actualizar">Actualizar</string>
    <string name="domingo">D</string>
    <string name="viernes">V</string>
    <string name="sabado">S</string>
    <string name="lunes_semana">Lunes</string>
    <string name="dia">Dia</string>
    <string name="desayuno_meal">Desayuno</string>
    <string name="media_manana">Media Mañana</string>

    <string name="almuerzo_comida">Almuerzo</string>
    <string name="media_tarde">Media Tarde</string>
    <string name="cena_comida">Cena</string>
    <string name="vacio" />
    <string name="guardar">Guardar</string>
    <string name="plan_nutricion">Plan de Nutricion</string>
    <string name="martes_semana">Martes</string>
    <string name="miercoles_semana">Miercoles</string>
    <string name="jueves_semana">Jueves</string>
    <string name="viernes_semana">Viernes</string>
    <string name="sabado_semana">Sabado</string>
    <string name="domingo_semana">Domingo</string>
    <string name="actualizar_dieta">Actualizar Dieta</string>


</resources>