<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alimentos"
            android:icon="@drawable/ic_menu_food"
            android:title="@string/alimentos" />

        <item
            android:id="@+id/nav_dieta"
            android:icon="@drawable/ic_chart"
            android:title="@string/dieta" />

        <item
            android:id="@+id/nav_imc"
            android:icon="@drawable/ic_menu_imc"
            android:title="@string/imc" />
        <item
            android:id="@+id/nav_restaurante"
            android:icon="@drawable/ic_menu_restaurante"
            android:title="@string/restaurantes" />
        <item
            android:id="@+id/nav_recetas"
            android:icon="@drawable/ic_baseline_receipt_24"
            android:title="@string/recetas" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/perfil_2" />
    </group>
</menu>