<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="12sp"
    tools:context=".mapas.restaurantes_google_Fragment"
    android:accessibilityPaneTitle="@string/restaurantes">

    <ImageView
        android:id="@+id/vegan_imageView2"
        android:layout_width="96dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/vegan"
        android:elevation="20dp"
        android:src="@drawable/vegan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegan_textView" />

    <ImageView
        android:id="@+id/vegetariano_imageView"
        android:layout_width="97dp"
        android:layout_height="126dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/vegetariano"
        android:elevation="20dp"
        android:src="@drawable/vegetariano_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegetariano_textView" />

    <ImageView
        android:id="@+id/variado_imageView"
        android:layout_width="94dp"
        android:layout_height="121dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/flexibles"
        android:elevation="20dp"
        android:src="@drawable/variado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/variado_textView" />

    <TextView
        android:id="@+id/variado_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/flexibles"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegetariano_imageView" />

    <TextView
        android:id="@+id/vegetariano_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/vegetariano"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegan_imageView2" />

    <TextView
        android:id="@+id/vegan_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/vegan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>