<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Recetas.nav_recetas">

    <ImageView
        android:id="@+id/desayuno_imageView"
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/desatunos_fitt"
        app:layout_constraintBottom_toTopOf="@+id/cenas_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desayunos_textView" />

    <ImageView
        android:id="@+id/almuerzo_imageView"
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/almuerzo"
        app:layout_constraintBottom_toTopOf="@+id/ensaladas_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/almuerzo_textView" />

    <ImageView
        android:id="@+id/cenas_imageView"
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/dinner_fitt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cenas_textView" />

    <ImageView
        android:id="@+id/ensaladas_imageView"
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/ensalada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ensaladas_textView" />

    <TextView
        android:id="@+id/desayunos_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:text="@string/desayuno"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/desayuno_imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/almuerzo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="2dp"
        android:text="@string/almuerzo"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/almuerzo_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cenas_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:text="@string/cena"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desayuno_imageView" />

    <TextView
        android:id="@+id/ensaladas_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:text="@string/ensalada"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/almuerzo_imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>